# streaming_data_processing

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
kafka_task/: config.py  consumer.py  producer.py  sensors_config.yaml
spark_task/: crawling_config.yaml  get_content.py  spark_attempt.ipynb  streaming_analysis.py
